@startuml Job.WebApi classes
hide empty members

abstract class Controller << ASP.NET Core >>
interface IHostedService << Built-In >>
interface ILogger << Serilog >>
interface IJobDbContext << External >>
class JobMessage << External >>
class NewJobModel << External >>
class CreateJobRequest << External >>
class JobResultResponse << External >>
interface IBrokerProducer<Guid, JobMessage> << External >>
IBrokerProducer --> JobMessage

class JobControllerOptions
{
    +TimeSpan DefaultTimeout
    +TimeSpan MaxTimeout
}

class LostJobWorkerOptions
{
    +bool IsEnabled
    +TimeSpan IterationDeplay
    +TimeSpan LostTimeoutForJobs
}

class LostJobWorker
{
    -CancellationTokenSource _wokerCancellation
    -Task _workerTask
    -Task RunLoopAsync(CancellationToken)
    -Task RunIterationAsync(CancellationToken)
}
IHostedService <|.. LostJobWorker
LostJobWorker --> LostJobWorkerOptions
LostJobWorker --> IJobDbContext
LostJobWorker --> ILogger

class JobController
{
    +Task<ActionResult<Guid>> AddNewJobAsync(CreateJobRequest, CancellationToken)
    +Task<ActionResult<JobResultResponse>> GetJobResultsAsync(Guid, CancellationToken)
}
Controller <|-- JobController
JobController --> IJobDbContext
JobController --> IBrokerProducer
JobController --> JobControllerOptions
JobController --> ILogger
JobController --> JobMessage
JobController --> NewJobModel
JobController --> CreateJobRequest
JobController --> JobResultResponse

@enduml
